# zcidr

./: .gitignore  LICENSE  MANIFEST.in  README.md  build.zig  build.zig.zon  pyproject.toml  setup.py
.github/workflows/: wheels.yml
benchmarks/: README.md  bench.py
include/: zcidr.h  znetaddress.h
src/: abi.zig  cidr.zig  ipv4.zig  ipv6.zig  lines.zig  root.zig  trie.zig
tests/: test_batch.py  test_benchmarks.py  test_differential.py  test_ipv4.py  test_ipv6.py  test_matcher.py  test_packaging.py  test_trie.py
zcidr/: __init__.py  _core.py
